<resources>

    <!-- App -->
    <string name="app_name">Confy</string>

    <!-- Signing -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have an account? Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="password_helper_text">Password must contain at least 8 characters with 1 number.</string>
    <string name="sign_up_intro_text">Welcome to Confy, where people meet, review and have conferences.</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="empty_email">Email can\'t be empty</string>
    <string name="empty_password">Password can\'t be empty</string>

    <!-- Conference -->
    <string name="create_conference_head">Creating new conference</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_conference">Create Conference</string>
    <string name="create">Create</string>
    <string name="join">Join Conference</string>
    <string name="empty_title">Title can\'t be empty</string>
    <string name="empty_description">Description can\'t be empty</string>
    <string name="invitation_link">Invitation link</string>
    <string name="change_profile">Change profile</string>
    <string name="update_profile">Update profile</string>
    <string name="change_password">Change password</string>
    <string name="update_password">Update password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Paper -->
   <string name="paper"> You didnt upload a Paper yet</string>
    <string name="update_paper"> Update Paper</string>
    <string name="download_paper"> Download Paper</string>
    <string name="upload_paper"> Upload Paper</string>
    <string name="go_back"> Return Conference</string>

</resources>