<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_normal"
    tools:context="paper.PaperFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="6dp"
        android:text="@+string/paper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_uploadpaper"
        style="@style/PrimaryButton"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_paper" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_updatepaper"
        style="@style/PrimaryButton"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_paper" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_downloadpaper"
        style="@style/PrimaryButton"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_paper" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_goback"
        style="@style/PrimaryButton"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />


</LinearLayout>
