<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/si"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_normal"
    tools:context=".app.signing.SignInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        style="@style/IntroTextView"
        android:text="@string/sign_in"
        android:layout_marginBottom="@dimen/spacing_extra_large"
        android:layout_height="wrap_content" />



    <com.google.android.material.textfield.TextInputLayout
        style="@style/OutlinedTextInputLayout"
        app:startIconDrawable="@drawable/ic_round_email_24"
        android:id="@+id/til_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/spacing_small"
        android:layout_height="wrap_content">

        <!--et stands for Edit Text-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/TextInputEditText"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/PasswordTextInputLayout"
        android:layout_marginVertical="@dimen/spacing_small"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/TextInputEditText"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/PrimaryButton"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />



</LinearLayout>
