<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.confy.app.user.UserViewModel" />
    </data>

    <LinearLayout
            android:id="@+id/ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/shape_dialog"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">

        <View
                android:id="@+id/v_head"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/shape_v_head" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_current_password"
                style="@style/PasswordTextInputLayout"
                android:layout_width="match_parent"
                android:hint="@string/current_password"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_current_password"
                    style="@style/TextInputEditText"
                    android:text="@={viewModel.currentPassword}"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_password"
                style="@style/PasswordTextInputLayout"
                app:helperTextEnabled="true"
                app:helperText="@string/password_helper_text"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:hint="@string/new_password"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    style="@style/TextInputEditText"
                    android:text="@={viewModel.newPassword}"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                style="@style/PrimaryButton"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/update_password"
                android:layout_height="wrap_content" />

    </LinearLayout>
</layout>