<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.confy.app.user.UserViewModel" />
    </data>

    <LinearLayout
            android:id="@+id/ll"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/shape_dialog"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">

        <View
                android:id="@+id/v_head"
                android:layout_width="30dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/shape_v_head" />

        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img"
                android:layout_gravity="center"
                app:shapeAppearance="?shapeAppearanceLargeComponent"
                android:layout_width="100dp"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_height="100dp"
                tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/OutlinedTextInputLayout"
                android:layout_marginVertical="@dimen/spacing_small"
                app:startIconDrawable="@drawable/ic_round_person_24"
                android:layout_margin="@dimen/spacing_normal"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:text="@={viewModel.name}"
                    android:inputType="textPersonName|textCapWords|textAutoComplete|textAutoCorrect"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedTextInputLayout"
                app:startIconDrawable="@drawable/ic_round_email_24"
                android:id="@+id/til_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_marginVertical="@dimen/spacing_small"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextInputEditText"
                    android:imeOptions="actionNext"
                    android:text="@={viewModel.email}"
                    android:inputType="textEmailAddress|textAutoComplete|textAutoCorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                style="@style/PrimaryButton"
                android:layout_margin="@dimen/spacing_normal"
                android:text="@string/update_profile"
                android:layout_height="wrap_content" />

    </LinearLayout>
</layout>