<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_change_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_sign_out"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_submit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit feedback" />

            <TextView
                android:id="@+id/tv_delete_account"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_marginBottom="70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/spacing_normal"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_collapseMode="pin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:hint="@string/name"
                    android:maxLength="32"
                    android:text="@{viewModel.user.name}"


                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img"
                    tools:text="Ali Albaali" />

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="216dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:hint="@string/name"
                    android:maxLength="32"
                    android:text="@{viewModel.user.name}"

                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img"
                    tools:text="alialbaali@hotmail.com" />
            </LinearLayout>


        </LinearLayout>
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="horizontal">
              <com.google.android.material.imageview.ShapeableImageView

                  android:layout_width="50"
                  android:layout_height="50"

                  android:src="@drawable/ic_round_person_24"
                  app:layout_collapseMode="pin"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  />

              <TextView

                  android:id="@+id/btn_change_profile"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/change_profile"


                  android:textSize="35"

                  />
          </LinearLayout>



        <LinearLayout
            android:layout_marginTop="85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.imageview.ShapeableImageView

                android:layout_width="50"
                android:layout_height="50"

                android:src="@drawable/ic_round_lock_24"
                app:layout_collapseMode="pin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/btn_change_password"
                android:textSize="35"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginVertical="60"
                android:layout_marginTop="@dimen/elevation_normal"
                android:text="@string/change_password" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
